--- a/frontend/src/app/modules/features/employer/profile/employer-profile/employer-profile.component.html
+++ b/frontend/src/app/modules/features/employer/profile/employer-profile/employer-profile.component.html
@@ -152,7 +152,7 @@
               <p class="mb-0">Phone Number</p>
               <ng-container *ngIf="companyProfileInfo?.contact; else elsePhoneTemplate">
                 <h5 *ngFor="let item of companyProfileInfo?.contact; let i=index">
-                  {{item ? item : ''}}
+                  {{item ? (item | phone) : ''}}
                 </h5>
               </ng-container>
               <ng-template #elsePhoneTemplate>
