--- a/frontend/src/app/shared/component/modal/contact-info/contact-info.component.html
+++ b/frontend/src/app/shared/component/modal/contact-info/contact-info.component.html
@@ -9,7 +9,7 @@
     <div class="mt-3">
       <div class="contactIcon"><i class="fas fa-phone-alt"></i> Phone </div>
       <h5>
-        {{userInfo?.phone}}
+        {{userInfo?.phone | phone}}
       </h5>
     </div>
     <div class="mt-4">
