--- a/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
@@ -59,7 +59,9 @@
                     </div>
                     <div class="col-lg-5 text-right mt-2">
                       <span data-toggle="modal" data-target="#exampleModal">
-                        <a (click)="onToggleResumeForm(true, (userMeta?.doc_resume?.path + '/' + userMeta?.doc_resume?.folder + '/' + onGetFilteredValue(item?.doc_resume)))" class="btn btn-outline-blue btn-sm" href="javascript:;">
+                        <a
+                        [class.disabled]="!onGetFilteredValue(item?.doc_resume)"
+                        (click)="onGetFilteredValue(item?.doc_resume) && onToggleResumeForm(true, (userMeta?.doc_resume?.path + '/' + userMeta?.doc_resume?.folder + '/' + onGetFilteredValue(item?.doc_resume)))" class="btn btn-outline-blue btn-sm" href="javascript:;">
                           <i class="fas fa-file-alt"></i> {{"dashboard.resume" | translate }}
                         </a>
                       </span>
@@ -68,7 +70,7 @@
 												<i class="fas fa-paper-plane"></i> Send Mail</a>
 											</span>
                     </div>
-                    <div class="save-icon" data-toggle="tooltip" title="Save"><i class="far fa-bookmark"></i></div>
+                    <div [ngClass]="{'active': savedProfiles?.includes(item?.id)}" (click)="onSaveProfile(item)" class="save-icon" data-toggle="tooltip" title="Save"><i class="far fa-bookmark"></i></div>
                   </div>
                   <div class="media">
                     <img [src]="item?.photo ? userMeta?.photo?.path+'/'+ userMeta?.photo?.folder+'/'+userMeta?.photo?.sizes?.medium+'/'+item?.photo : 'assets/images/user-img-icon.jpg'">
