--- a/frontend/src/app/modules/features/employer/employer-shortlisted-candidate/employer-shortlisted-candidate.component.html
+++ b/frontend/src/app/modules/features/employer/employer-shortlisted-candidate/employer-shortlisted-candidate.component.html
@@ -5,7 +5,7 @@
         <div class="matching-post">
           <div *ngFor="let item of postedJobs; let i = index" class="custom-control custom-radio mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
             <input (change)="onSetJob(item)" class="custom-control-input  mb-0" type="radio" id="Check_{{i}}" name="example1_{{selectedJob?.id}}_{{item?.id}}" [checked]="(selectedJob?.id == item?.id)">
-            <label class="text-capitalize custom-control-label mb-0" for="Check_{{i}}">{{item?.title}} {{ selectedJob?.id == item?.id ? (appliedJobMeta?.total ?  '(' + appliedJobMeta?.total + ')' :  '(' +0+ ')') : ''}} </label>
+            <label class="text-capitalize custom-control-label mb-0" for="Check_{{i}}">{{item?.title}} {{ selectedJob?.id == item?.id ? (shortListedMeta?.total ?  '(' + shortListedMeta?.total + ')' :  '(' +0+ ')') : ''}} </label>
           </div>
         </div>
       </div>
@@ -27,7 +27,6 @@
             </tr>
             </thead>
             <tbody>
-            <tr>
               <ng-container *ngIf="shortListedJobs?.length; else elseTemplate">
                 <tr *ngFor="let item of shortListedJobs">
                   <td>
@@ -38,7 +37,7 @@
                   <td class="text-capitalize">
                     {{item?.user?.current_employer_role ? item?.user?.current_employer_role : '--'}}
                   </td>
-                  <td>{{item?.user?.phone ? item?.user?.phone : '--'}}</td>
+                  <td>{{item?.user?.phone ? (item?.user?.phone | phone) : '--'}}</td>
                   <td>{{item?.user?.email ? item?.user?.email : '--'}}</td>
                   <td class="text-capitalize">
                     {{item?.user?.city ? item?.user?.city + ', ' : ''}}
@@ -52,7 +51,6 @@
                   <td colspan="6">No Record Found</td>
                 </tr>
               </ng-template>
-             </tr>
             </tbody>
           </table>
         </div>
