--- a/frontend/src/app/modules/features/employer/modal/job-preview/job-preview.component.html
+++ b/frontend/src/app/modules/features/employer/modal/job-preview/job-preview.component.html
@@ -80,7 +80,7 @@
         <div class="col-lg-4 caption">
           <ul class="list-group">
             <li class="list-group-item text-capitalize">{{"postJob.jobType" | translate}}</li>
-            <li class="list-group-item text-capitalize" *ngIf="jobInfo?.type == '6'">{{"postJob.contractDuration" | translate}}</li>
+            <!-- <li class="list-group-item text-capitalize" *ngIf="jobInfo?.type == '6'">{{"postJob.contractDuration" | translate}}</li> -->
             <li class="list-group-item text-capitalize">{{"postJob.salary" | translate}}</li>
             <li class="list-group-item text-capitalize">{{"postJob.remote" | translate}}</li>
             <li class="list-group-item text-capitalize">{{"postJob.startTime" | translate}}</li>
@@ -91,8 +91,11 @@
         </div>
         <div class="col-lg-6 info">
           <ul class="list-group">
-            <li class="list-group-item text-capitalize">{{sharedService.onGetJobType(jobInfo?.type)}}</li>
-            <li class="list-group-item text-capitalize" *ngIf="jobInfo?.type == '6'">{{jobInfo?.contract_duration}} months</li>
+            <li class="list-group-item text-capitalize">
+              {{sharedService.onGetJobType(jobInfo?.type)}}
+              <span *ngIf="(jobInfo?.type == '6' || jobInfo?.type == 6)">({{jobInfo?.contract_duration}} months)</span>
+            </li>
+            <!-- <li class="list-group-item text-capitalize" *ngIf="jobInfo?.type == '6'">{{jobInfo?.contract_duration}} months</li> -->
             <li class="list-group-item text-capitalize">
               <ng-container *ngIf="jobInfo?.salary_type == 0">
                 {{sharedService.onGetCurrencyCode(jobInfo?.salary_currency)?.symbol + jobInfo?.salary + '/hr'}}
