--- a/frontend/src/app/shared/component/modal/send-mail-job-preview/send-mail-job-preview.component.html
+++ b/frontend/src/app/shared/component/modal/send-mail-job-preview/send-mail-job-preview.component.html
@@ -29,76 +29,13 @@
         </div>
       </div>
     </div>
-    <app-shared-job-profile [jobInfo]="jobInfo"
-          [isDescrition]="true">
-        </app-shared-job-profile>
-    <!-- <div class="row mt-3 info-box">
-      <div class="col-lg-4 caption">
-        <ul class="list-group">
-          <li class="list-group-item">Total Years of Experience</li>
-          <li class="list-group-item">Total SAP Experience</li>
-          <li class="list-group-item">Domain Experience in</li>
-          <li class="list-group-item">Hands on Experience</li>
-        </ul>
-      </div>
-      <div class="col-lg-8 info">
-        <ul class="list-group">
-          <li class="list-group-item">8+ Years</li>
-          <li class="list-group-item">5+ Years</li>
-          <li class="list-group-item">Automotive, Logistics, Finance, Shipping</li>
-          <li class="list-group-item">SAP PM, SAP MM, SAP Mobility</li>
-        </ul>
-      </div>
-
-      <div class="col-lg-12 border-top pt-3">	</div>
-      <div class="col-lg-4 caption">
-        <ul class="list-group">
-          <li class="list-group-item">Knowledge on</li>
-          <li class="list-group-item">Programming Skills</li>
-          <li class="list-group-item">Nice to have</li>
-          <li class="list-group-item">Certification</li>
-        </ul>
-      </div>
-      <div class="col-lg-8 info">
-        <ul class="list-group">
-          <li class="list-group-item">SAP BODS, SAP Mobility, SAP FICO </li>
-          <li class="list-group-item">Python, JAVA, Microsoft BI, Angular </li>
-          <li class="list-group-item">Python, SAP BODS</li>
-          <li class="list-group-item">SAP BODS</li>
-        </ul>
-      </div>
-      <div class="col-lg-12 border-top pt-3">	</div>
-
-      <div class="col-lg-4 caption">
-        <ul class="list-group">
-          <li class="list-group-item">Job Type</li>
-          <li class="list-group-item">Remote</li>
-          <li class="list-group-item">Start Time</li>
-          <li class="list-group-item">Work Visa</li>
-          <li class="list-group-item">Travel Required</li>
-          <li class="list-group-item">Willing to Relocate</li>
-        </ul>
-      </div>
-      <div class="col-lg-8 info">
-        <ul class="list-group">
-          <li class="list-group-item">Permanent, Contract, Part Time</li>
-          <li class="list-group-item">Yes</li>
-          <li class="list-group-item">Immediate</li>
-          <li class="list-group-item">H1B</li>
-          <li class="list-group-item">75%</li>
-          <li class="list-group-item">Yes</li>
-        </ul>
-      </div>
-      <div class="col-lg-12 border-top pt-3">	</div>
-
-      <div class="col-lg-12">
-        <h6>Job Description</h6>
-        <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-      </div>
-    </div> -->
+    <app-shared-job-profile
+    [jobInfo]="jobInfo"
+    [isDescrition]="true">
+    </app-shared-job-profile>
     </div>
     <div class="modal-footer">
     <button (click)="onClickCloseBtn(false)" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-    <button (click)="onSendMail()" type="button" class="btn btn-theme-blue" data-dismiss="modal" data-toggle="modal" data-target="#successMsg" >Send Mail</button>
+    <button (click)="onShortListUser()" type="button" class="btn btn-theme-blue" data-dismiss="modal" data-toggle="modal" data-target="#successMsg" >Send Mail</button>
     </div>
 </ng-template>
